# job-scraper

./: .gitignore  LICENSE  berlinstartupjobs.py  common.py  main.py  pyproject.toml  scraper.py  scraping_berlinstartupjobs.py  scraping_web3.py  scraping_wwr.py
templates/: home.html  results.html
